# ai-agent-v1.0

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py
Main/: 1main.ipynb  main.ipynb
src/: cli.py  web.py
src/core/: __init__.py  ai_utils.py  base_module.py  config.py  container.py  engine.py  logger.py  module_loader.py
src/services/alchemist/: module.py
src/services/architect/: module.py
src/services/scaffolder/: __init__.py  api_documentation_manager.py  ci_cd_manager.py  code_quality_manager.py  containerization_manager.py  database_manager.py  dependency_manager.py  environment_manager.py  module.py  observability_manager.py  parallel_scaffolder.py  project_management_manager.py  security_manager.py  template_manager.py  testing_manager.py
src/services/scaffolder/templates/csharp/aspnet/: template.json
src/services/scaffolder/templates/csharp/dotnet-core/: template.json
src/services/scaffolder/templates/go/echo/: template.json
src/services/scaffolder/templates/go/gin/: template.json
src/services/scaffolder/templates/java/micronaut/: template.json
src/services/scaffolder/templates/java/spring-boot/: template.json
src/services/scaffolder/templates/javascript/react/: template.json
src/services/scaffolder/templates/php/laravel/: template.json
src/services/scaffolder/templates/python/fastapi/: template.json
src/services/scaffolder/templates/ruby/rails/: template.json
src/services/scaffolder/templates/rust/actix/: template.json
src/services/scaffolder/templates/rust/axum/: template.json
src/services/scaffolder/templates/rust/rocket/: template.json
src/services/sentinel/: module.py
templates/: index.html  module.html
tests/: conftest.py  test_ai_utils.py  test_cli.py  test_e2e.py  test_engine.py  test_integration.py  test_logger.py  test_modules.py  test_performance.py  test_security.py
