[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeforge-ai"
version = "1.0.0"
description = "Unified Modular AI Agent for Software Development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
keywords = ["ai", "agent", "development", "automation", "code", "generation", "analysis"]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.0.0",
    "slowapi>=0.1.0",
    "langdetect>=1.0.0",
    "reportlab>=4.0.0",
]
all = [
    "codeforge-ai[dev,web]",
]

[project.scripts]
codeforge = "src.cli:main"
codeforge-ai = "src.cli:main"

[project.urls]
Homepage = "https://github.com/berki6/ai-agent"
Documentation = "https://github.com/berki6/ai-agent#readme"
Repository = "https://github.com/berki6/ai-agent"
Issues = "https://github.com/berki6/ai-agent/issues"
Changelog = "https://github.com/berki6/ai-agent/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["templates/*", "docs/*"]